Fixing the issue with the mobile image not showing and tweaking the responsiveness of said images on Schools page.

--- a/wp-content/themes/bpca-master/style.css
+++ b/wp-content/themes/bpca-master/style.css
@@ -5249,6 +5249,12 @@ next.page-numbers:hover {
 
 .grid-description-images li { float: left; }
 
+@media screen and (min-width: 415px) and (max-width: 1023px) {
+    .grid-description-images li {
+        width: 50%;
+    }
+}
+
 .grid-info {
     background-color: #fff;
     height:           100%;
